<resources>
    <string name="app_name">TastyWardOffice</string>
    <string name="title_name">맛구청</string>
    <string name="bottom_navigation_first">지도로 보기</string>
    <string name="bottom_navigation_second">목록으로 보기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_button">메뉴</string>
    <string name="map_button">지도</string>
    <string name="review_button">리뷰</string>
    <string name="location">테헤란로</string>
    <string name="locationLoss">세부 주소가 없습니다.</string>
    <string name="japan">일식</string>
    <string name="chines">중식</string>
    <string name="korean">한식</string>
    <string name="kimbap">분식</string>
    <string name="western">양식</string>
    <string name="dessert">디저트</string>
    <string name="asian">아시안</string>
    <string name="chiken">치킨</string>
    <string name="bar">주점</string>
    <string name="all">all</string>
    <string name="buttonAll">전체</string>
    <string name="menu">메뉴</string>
    <string name="gangnam">강남구</string>
    <string name="gangdong">강동구</string>
    <string name="gangbuk">강북구</string>
    <string name="gangseo">강서구</string>
    <string name="gwanak">관악구</string>
    <string name="gwangjin">광진구</string>
    <string name="guro">구로구</string>
    <string name="geumcheon">금천구</string>
    <string name="nowon">노원구</string>
    <string name="dobong">도봉구</string>
    <string name="ddm">동대문구</string>
    <string name="dongjak">동작구</string>
    <string name="mapo">마포구</string>
    <string name="sdm">서대문구</string>
    <string name="seocho">서초구</string>
    <string name="sd">성동구</string>
    <string name="sb">성북구</string>
    <string name="songpa">송파구</string>
    <string name="yangcheon">양천구</string>
    <string name="ydp">영등포구</string>
    <string name="yongsan">용산구</string>
    <string name="ep">은평구</string>
    <string name="jongno">종로구</string>
    <string name="junggu">중구</string>
    <string name="jungnang">중랑구</string>
    <string name="wardLocation">지역</string>
    <string name="explain">추후 업데이트 예정입니다</string>
    <string name="internetcheck">인터넷 연결을 확인해주세요</string>
    <string name="locationcheck">위치권한을 확인해 주세요</string>
    <string name="fragment_login_signin">구글 로그인</string>
    <string name="fragment_login_signout">로그아웃</string>
    <string name="fragment_login_edit_email">Email</string>
    <string name="fragment_login_edit_password">Password</string>
    <string name="fragment_login_btn_create_email">계정생성</string>
    <string name="fragment_login_btn_login">로그인</string>
    <string name="fragment_review_btn_createreview">리뷰 작성</string>
    <string name="social_login_info_naver_client_id">OQVLImu_IwLZNpQkzK6X</string>
    <string name="social_login_info_naver_client_secret">FIqqMxiEX5</string>
    <string name="social_login_info_naver_client_name">맛구청 입니다</string>
    <string name="fragment_login_naver_signin">네이버 로그인</string>
</resources>