<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imgMore1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="86dp"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:animateLayoutChanges="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/title_button"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:textSize="20dp"
            android:text="@string/menu"
            android:textStyle="bold"
            android:textColor="@color/backgroundLightYellowTextColor"
            android:background="@drawable/border_imgview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/filter_button_all"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/buttonAll"/>

        <Button
            android:id="@+id/filter_button_japan"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/japan"/>
        <Button
            android:id="@+id/filter_button_korean"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/korean"/>
        <Button
            android:id="@+id/filter_button_china"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/chines"/>
        <Button
            android:id="@+id/filter_button_kimbap"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/kimbap"/>
        <Button
            android:id="@+id/filter_button_western"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/western"/>
        <Button
            android:id="@+id/filter_button_dessert"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/dessert"/>
        <Button
            android:id="@+id/filter_button_asian"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/asian"/>
        <Button
            android:id="@+id/filter_button_chiken"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/chiken"/>
        <Button
            android:id="@+id/filter_button_bar"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:textSize="18dp"
            android:background="@drawable/border_list_imgview"
            android:textStyle="bold"
            android:text="@string/bar"/>
    </LinearLayout>
</LinearLayout>