<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imgMore2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/filter_ward_office_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:background="@drawable/border_imgview"
            android:text="@string/wardLocation"
            android:textColor="@color/backgroundLightYellowTextColor"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_expand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/filter_button_gangnam"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gangnam"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_gandong"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gangdong"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_gangbuk"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gangbuk"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_gangseo"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gangseo"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_gwanak"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gwanak"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_gwangjin"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/gwangjin"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_guro"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/guro"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_geumcheon"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/geumcheon"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_nowon"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/nowon"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_dobong"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/dobong"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_ddm"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/ddm"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_dongjak"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/dongjak"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_mapo"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/mapo"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />
            <!--15개 구-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_expand3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/filter_button_sdm"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/sdm"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_seocho"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/seocho"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_sd"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/sd"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_sb"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/sb"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_songpa"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/songpa"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_yangcheon"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/yangcheon"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_ydp"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/ydp"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_yongsan"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/yongsan"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_ep"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/ep"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_jongno"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/jongno"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_junggu"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/junggu"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/filter_button_jungnang"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/border_list_imgview"
                android:text="@string/jungnang"
                android:textColor="@color/backgroundLightYellowTextColor"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


